--- a/bma/templates/play.html
+++ b/bma/templates/play.html
@@ -1,127 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Task Slave Market</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */ 
-    .navbar {
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-    
-    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 450px}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      padding-top: 20px;
-      background-color: white;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height:auto;} 
-    }
-  </style>
+    <title>Task Slave Market</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <style>
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+
+        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+        .row.content {
+            height: 450px
+        }
+
+        /* Set gray background color and 100% height */
+        .sidenav {
+            padding-top: 20px;
+            background-color: white;
+            height: 100%;
+        }
+
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 15px;
+        }
+
+        /* On small screens, set height to 'auto' for sidenav and grid */
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 15px;
+            }
+
+            .row.content {
+                height: auto;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">TSM</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="/">Play</a></li>
-        <li class="active"><a href="#">Resume Game</a></li>
-        <li><a href="/wiki">Wiki</a></li>
-        <li><a href="/wall-of-shame">Wall Of Shame</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://discord.gg/CpK3QvnM"><span class="glyphicon glyphicon-log-in"></span> Discord</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-  
-<div class="container-fluid text-center">    
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-    </div>
-    <div class="col-sm-8 text-left"> 
-      <pre>
-{{ text }}
-      </pre>
-      <hr>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">TSM</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Play</a></li>
+                    <li class="active"><a href="#">Resume Game</a></li>
+                    <li><a href="/wiki">Wiki</a></li>
+                    <li><a href="/wall-of-shame">Wall Of Shame</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://discord.gg/CpK3QvnM"><span class="glyphicon glyphicon-log-in"></span>
+                            Discord</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<form method="post">
-  <div class="form-group">
-    <label for="action" class="control-label">Task Options</label> 
-    <div>
-      <div class="checkbox">
-        <label class="checkbox">
-          <input type="radio" name="action" value="done">
-              Done (You did all parts of the task correctly)
-        </label>
-      </div>
-      <div class="checkbox">
-        <label class="checkbox">
-          <input type="radio" name="action" value="fail">
-              Fail (You did not do the task as described)
-        </label>
-      </div>
-      <div class="checkbox">
-        <label class="checkbox">
-          <input type="radio" name="action" value="err">
-              Error (You can not do this task becasue you do not have the equipment or it is imposible)
-        </label>
-      </div>
-    </div>
-  </div> 
-  <div class="form-group">
-    <button name="submit" type="submit" class="btn btn-primary">Submit</button>
-  </div>
-</form>
+    <div class="container-fluid text-center">
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+            </div>
+            <div class="col-sm-8 text-left">
+                <blockquote class="blockquote">
+                    {{ text }}
+                </blockquote>
+                <hr>
 
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-          <p>Session Id: {{ uuid }} </p>
-          <p><a href="/logout">Logout</a></p>
-      </div>
-    </div>
-  </div>
-</div>
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+                <link rel="stylesheet"
+                    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                <form method="post">
+                    <div class="form-group">
+                        <label for="action" class="control-label">Task Options</label>
+                        <div>
+                            <div class="checkbox">
+                                <label class="checkbox">
+                                    <input type="radio" name="action" value="done">
+                                    Done (You did all parts of the task correctly)
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label class="checkbox">
+                                    <input type="radio" name="action" value="fail">
+                                    Fail (You did not do the task as described)
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label class="checkbox">
+                                    <input type="radio" name="action" value="err">
+                                    Error (You can not do this task because you do not have the equipment or it is
+                                    impossible)
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button name="submit" type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
 
-<footer class="container-fluid text-center">
-  <p>TSM v0.1 All rights reserved.</p>
-</footer>
+            </div>
+            <div class="col-sm-2 sidenav">
+                <div class="well">
+                    <p>Session Id: {{ uuid }} </p>
+                    <p><a href="/logout">Logout</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container-fluid text-center">
+        <p>TSM v0.1 All rights reserved.</p>
+    </footer>
 
 </body>
+
 </html>
