--- a/bma/templates/play.html
+++ b/bma/templates/play.html
@@ -82,7 +82,12 @@
             </div>
             <div class="col-sm-8 text-left">
                 <blockquote class="blockquote">
-                    {{ text }}
+{%- for line in text -%}
+    {{ line }}
+    {%- if not loop.last -%}
+        <br />
+    {%- endif -%}
+{%- endfor -%}
                 </blockquote>
                 <hr>
 
