added web hooks

--- a/bma/templates/start.html
+++ b/bma/templates/start.html
@@ -74,7 +74,7 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Welcome To The Task Slave Market</h1>
-      <p> This is a kink game where you sell yourself to a shady ring of (digital) masters. Once you have given them controll, they will give you tasks kinky tasks to complete. Fail to do their tasks and you will be punished! If this sound like something you would want to do, scroll down to get started. Questions? Ask in the discord!
+      <p> This is a kink game where you sell yourself to a shady ring of (digital) masters. Once you have given them control, they will give you tasks kinky tasks to complete. Fail to do their tasks and you will be punished! If this sound like something you would want to do, scroll down to get started. Questions? Ask in the discord!
       </p>
       <hr>
 
@@ -106,19 +106,19 @@
       <div class="checkbox">
         <label class="checkbox">
           <input type="radio" name="dom_type" value="-15,50,0.5">
-              Nutral - 30m Sessions
+              Neutral - 30m Sessions
         </label>
       </div>
       <div class="checkbox">
         <label class="checkbox">
           <input type="radio" name="dom_type" value="-25,100,1">
-              Nutral - 1h Sessions
+              Neutral - 1h Sessions
         </label>
       </div>
       <div class="checkbox">
         <label class="checkbox">
           <input type="radio" name="dom_type" value="-30,150,2">
-              Nutral - 2h Sessions
+              Neutral - 2h Sessions
         </label>
       </div>
       <div class="checkbox">
@@ -139,7 +139,7 @@
               Mean - 2h Sessions
         </label>
       </div> 
-      <span id="dom_typeHelpBlock" class="help-block">How mean do you wan't your doms to be?</span>
+      <span id="dom_typeHelpBlock" class="help-block">How mean do you want your doms to be?</span>
     </div>
   </div>
   <div class="form-group">
@@ -172,7 +172,7 @@
       <div class="checkbox">
         <label class="checkbox">
           <input type="checkbox" name="kinks" value="crossdressing">
-              Crossdressing
+              Cross dressing
         </label>
       </div>
       <div class="checkbox">
@@ -226,10 +226,10 @@
       <div class="checkbox">
         <label class="checkbox">
           <input type="checkbox" name="kinks" value="alt">
-              Prostate / Tit Orgasam
+              Prostate / Tit Orgasm
         </label>
       </div> 
-      <span id="kinksHelpBlock" class="help-block">What are your kinks?</span>
+      <span id="kinksHelpBlock" class="help-block">What are your kinks? (4 Min)</span>
     </div>
   </div>
   <div class="form-group">
@@ -262,7 +262,7 @@
       <div class="checkbox">
         <label class="checkbox">
           <input type="checkbox" name="punishments" value="crossdressing">
-              Crossdressing
+              Cross dressing
         </label>
       </div>
       <div class="checkbox">
@@ -316,7 +316,7 @@
       <div class="checkbox">
         <label class="checkbox">
           <input type="checkbox" name="punishments" value="alt">
-              Prostate / Tit Orgasam
+              Prostate / Tit Orgasm
         </label>
       </div> 
       <span id="punishmentsHelpBlock" class="help-block">What type of tasks would be good punishments for you&gt;</span>
@@ -333,7 +333,7 @@
     <span id="hard_limitsHelpBlock" class="help-block">You can not change this latter!</span>
   </div>
   <div class="form-group">
-    <label for="dificulty" class="control-label">Task Dificulty</label> 
+    <label for="dificulty" class="control-label">Task Difficulty</label> 
     <div>
       <div class="checkbox">
         <label class="checkbox">
