--- a/bma/templates/start.html
+++ b/bma/templates/start.html
@@ -387,7 +387,7 @@
     <div>
       <label class="checkbox-inline">
         <input type="checkbox" name="checkbox" value="yes">
-              I accept the tos.
+              I accept the <a href="/tos">tos</a>.
       </label> 
       <span id="checkboxHelpBlock" class="help-block">By checking this you consent to the TOS.</span>
     </div>
